# uid-tool

./: .dockerignore  .gitignore  README.md  README.txt  config.py  docker-compose.yml  dockerfile  package.json  pyproject.toml  requirements.txt  start.sh  tailwind.config.js  tailwind.sh  todo.md  uwsgi.ini  wsgi.py
.github/workflows/: deploy.yml
app/: __init__.py  auth.py  data.py  db.py  project.py  record.py  schema.sql  user.py
app/dao/: DataDao.py  ProjectDao.py  RecordDao.py  UserDao.py
app/static/src/: main.js
app/templates/: base.html
app/templates/auth/: error.html  login.html  permission-denied.html  register.html  validation.html
app/templates/data/: create.html  delete-confirmation.html  download.html  edit.html  edit2.html  filter.html  index.html  location.html  projects.html  row.html  table-body.html  update.html  validation.html
app/templates/project/: create.html  edit.html  index.html  row.html  update.html  validation.html
app/templates/record/: create.html  delete-confirmation.html  download.html  index.html  location.html  row.html  table-body.html
app/templates/user/: assign-project.html  create.html  delete-confirmation.html  edit.html  index.html  project-action.html  register.html  row.html
omni-tool/: __init__.py  auth.py  user.py
omni-tool/dao/: ProjectDao.py
omni-tool/static/src/: main.css  main.js  unpkg.com_htmx.org@1.7.0_dist_htmx.js
omni-tool/templates/auth/: login.html  register.html  validation.html
omni-tool/templates/project/: update.html  validation.html
omni-tool/templates/record/: edit2.html  (+2 more)
(+5 files in other folders)
