[tool.poetry]
name = "uoi-tool"
version = "0.1.0"
description = ""
authors = ["Skyler Kimura <skyler8@hawaii.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.7"
flask = "^2.3.3"
flask-assets = "^2.0"
python-dotenv = "^1.0.0"
pycln = "^2.2.2"
pydocstyle = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
